--- a/static/theatre/demo/demo.html
+++ b/static/theatre/demo/demo.html
@@ -1,12 +1,3 @@
-{% extends "base2.html" %}
-
-{% load i18n %}
-{% load account socialaccount %}
-{% load staticfiles %}
-
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
-
-{% block content %}
 <?xml version="1.0"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" class="commonPage" lang="en-GB" xml:lang="en-GB">
@@ -18,11 +9,11 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
 	<!-- Include Theatre files - I recommend extracting all the Theatre files into "theatre" folder for easier upgrades in the future -->
-	<link type="text/css" rel="stylesheet" href="{% static "theatre/theatre.css" %}"/>
-	<script type="text/javascript" src="{% static "theatre/jquery.theatre.min.js" %}"></script>
+	<link type="text/css" rel="stylesheet" href="../theatre.css"/>
+	<script type="text/javascript" src="../jquery.theatre.min.js"></script>
 
 	<!-- Some styling for this page -->
-	<link rel="stylesheet" href="{% static "theatre/demo/demo.css" %}"/>
+	<link rel="stylesheet" href="demo.css"/>
 
 	<!-- This is how you initialize theatre -->
 	<script type="text/javascript">
@@ -79,34 +70,34 @@
 	<!-- gallery -->
 	<div id="myExample" style="width: 632px; margin: auto; visibility: hidden /* trick to hide loading images before Theatre kicks in */;">
 	  <a href="1.jpg" target="_blank">
-		<img src="{% static "theatre/demo/1.jpg" %}" >
+		<img src="1.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	  <a href="2.jpg" target="_blank">
-		<img src="{% static "theatre/demo/2.jpg" %}">
+		<img src="2.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	  <a href="3.jpg" target="_blank">
-		<img src="{% static "theatre/demo/3.jpg" %}">
+		<img src="3.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	  <a href="4.jpg" target="_blank">
-		<img src="{% static "theatre/demo/4.jpg" %}">
+		<img src="4.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	  <a href="5.jpg" target="_blank">
-		<img src="{% static "theatre/demo/5.jpg" %}">
+		<img src="5.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	  <a href="6.jpg" target="_blank">
-		<img src="{% static "theatre/demo/6.jpg" %}">
+		<img src="6.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	  <a href="7.jpg" target="_blank">
-		<img src="{% static "theatre/demo/7.jpg" %}">
+		<img src="7.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	  <a href="8.jpg" target="_blank">
-		<img src="{% static "theatre/demo/8.jpg" %}">
+		<img src="8.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	  <a href="9.jpg" target="_blank">
-		<img src="{% static "theatre/demo/9.jpg" %}">
+		<img src="9.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	  <a href="10.jpg" target="_blank">
-		<img src="{% static "theatre/demo/10.jpg" %}">
+		<img src="10.jpg" style="height: 236px; width: 320px;"/>
 	  </a>
 	</div>
 
@@ -118,4 +109,3 @@
 
   </body>
 </html>
-{% endblock %}
